Project go_clean_arch {
  database_type: 'PostgreSQL'
  Note: '''
    # Books
  '''
}

Table users {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table books {
  id bigserial [pk]
  owner varchar [not null, ref: > users.username]
  name varchar [not null]
  language varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    owner
    (owner, name) [unique]
    (owner, language)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [not null, ref: > users.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked bool [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}
